package xyz.xiaolinz.demo.adapter.classadapter;
/**
 * 类适配器模式 - 需要适配的类
 *
 * @author huangmuhong
 * @date 2023/08/10
 * @version 1.0.0
 */
public class Adapter {
  public void specificRequest() {
    System.out.println("特殊请求");
  }
}
