package xyz.xiaolinz.demo.adapter.classadapter;
/**
 * @author huangmuhong
 * @date 2023/8/10
 */
public class Main {
  public static void main(String[] args){
    Target target = new ClassAdapter();
    target.request();
  }
}
