package xyz.xiaolinz.demo.adapter.objectadapter;
/**
 * 类适配器模式 - 目标角色 定义了目标角色的行为，这里是request()方法
 *
 * @author huangmuhong
 * @date 2023/08/10
 * @version 1.0.0
 */
public interface Target {

  /**
   * 要求
   *
   * @author huangmuhong
   * @date 2023/08/10
   * @since 1.0.0
   */
  void request();
}
